# Elysian

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/: PhysicsSystem.h
Application/src/: main.cpp
Elysian/: CMakeLists.txt
Elysian/include/: Elysian.h
Elysian/include/Elysian/Core/: Application.h  Assert.h  Engine.h  Logging.h  Platform.h  Profiler.h  pch.h
Elysian/include/Elysian/ECS/: ComponentArray.h  ComponentPattern.h  ComponentTemplate.h  EntitySet.h  Scene.h  System.h  Types.h
Elysian/src/Elysian/Core/: Application.cpp  Logging.cpp
